--- a/public/css/app.css
+++ b/public/css/app.css
@@ -681,14 +681,14 @@ select {
 .ml-auto {
   margin-left: auto;
 }
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-.mr-1 {
-  margin-right: 0.25rem;
-}
 .-mr-2 {
   margin-right: -0.5rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 .block {
   display: block;
@@ -962,14 +962,8 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
-.pl-0 {
-  padding-left: 0px;
-}
-.pr-0 {
-  padding-right: 0px;
-}
-.pr-3 {
-  padding-right: 0.75rem;
+.pr-2 {
+  padding-right: 0.5rem;
 }
 .pt-1 {
   padding-top: 0.25rem;
@@ -991,9 +985,6 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
-}
-.pr-2 {
-  padding-right: 0.5rem;
 }
 .text-center {
   text-align: center;
