--- a/public/css/app.css
+++ b/public/css/app.css
@@ -681,14 +681,14 @@ select {
 .ml-auto {
   margin-left: auto;
 }
-.-mr-2 {
-  margin-right: -0.5rem;
-}
 .mt-5 {
   margin-top: 1.25rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+.-mr-2 {
+  margin-right: -0.5rem;
 }
 .block {
   display: block;
@@ -985,6 +985,9 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
